test/files/neg/t10073b.check
t10073b.scala:7: error: tpe Unused is an unresolved spliceable type
   "".yo()
   ^
one error found
